# OpenSGMerger

./: CMakeLists.txt  README.md  main.cpp
CMake/: FindOpenSG.cmake
